--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,8 @@ spring:
   data:
     mongodb:
       uuid-representation: standard
+  autoconfigure:
+    exclude:
+      - com.netflix.graphql.dgs.autoconfig.DgsAutoConfiguration
+      - com.netflix.graphql.dgs.webmvc.autoconfigure.DgsWebMvcAutoconfiguration
+      - graphql.spring.web.servlet.GraphQLEndpointConfiguration
